example/errors/lexer/unterminated_char_literal.box
println("begin");
set ch: char = 'a;

println("do something here");


println("more in here");
